# fb_daily_post

./: .gitignore  CMakeLists.txt  README.md  fb_post  img_gen_working_final.sh  my_program
.github/workflows/: run-script.yml
include/: header.h
src/: CMakeLists.txt  fb_pages.cpp  functions.cpp  main.cpp
test/: a.out  test.cpp
